# VideoEffects

./: .gitignore  Makefile  README.md  blur.ipynb  blur.py  example2-3.py  frameaverager.py  majority.py  majority2.py  motion.py  motion2.py  motionblur.py  motiondiff-sample.py  opencv3-motiondetect.py  pyproject.toml  slicer.py  spacetimedistorter.py  spacetimeslicer.py  videotest.py
